--- a/android/app/src/main/res/layout/fragment_qr.xml
+++ b/android/app/src/main/res/layout/fragment_qr.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.budiyev.android.codescanner.CodeScannerView
+        android:layout_marginTop="24dp"
         android:id="@+id/scanner_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"
