--- a/android/app/src/main/res/layout/fragment_pantry.xml
+++ b/android/app/src/main/res/layout/fragment_pantry.xml
@@ -16,26 +16,35 @@
         android:layout_marginBottom="24dp" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="32dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textViewIngredientName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:paddingTop="8dp"
             android:paddingBottom="16dp"
             android:text="Ingredients"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            />
-
+            android:textStyle="bold" />
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnSort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sort By..."
+        app:layout_anchor="@+id/relativeLayout"
+        app:layout_anchorGravity="end|center"
+        android:layout_marginEnd="10dp"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
