--- a/android/app/src/main/res/layout/fragment_pantry.xml
+++ b/android/app/src/main/res/layout/fragment_pantry.xml
@@ -37,14 +37,14 @@
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/btnSort"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/ingredients_spinner"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="Sort By..."
+        android:layout_marginEnd="10dp"
         app:layout_anchor="@+id/relativeLayout"
-        app:layout_anchorGravity="end|center"
-        android:layout_marginEnd="10dp"/>
+        app:layout_anchorGravity="end|center"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
