--- a/android/app/src/main/res/layout/fragment_pantry.xml
+++ b/android/app/src/main/res/layout/fragment_pantry.xml
@@ -42,8 +42,9 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
+        android:entries="@array/pantry_filter"
         app:layout_anchor="@+id/relativeLayout"
-        app:layout_anchorGravity="end|center"/>
+        app:layout_anchorGravity="end|center" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
