--- a/android/app/src/main/res/layout/item_ingredient.xml
+++ b/android/app/src/main/res/layout/item_ingredient.xml
@@ -17,7 +17,7 @@
         <FrameLayout
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:background="#98db6c"/>
+            android:background="#bcf2aa"/>
 
         <LinearLayout
             android:layout_width="match_parent"
